Micronaut OpenAPI updates: * Upgrade to micronaut 4.6.2 * Extract allowValues into enums * Fix InsuranceCoverage as not a required field on RedeliveryDetail * Define Bearer Security Scheme * Move away from deprecated @LazyCollection * Define array examples by using @ArraySchema * Define type as integer instead of number where format=int32